<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Contact">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/default_box"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/title_box"
            android:elevation="4dp"
            android:padding="6dp"
            android:text="@string/title_info_contact"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#EEEEEE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="64dp"
            android:background="@drawable/white_box"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp">

            <ImageView
                android:id="@+id/iconoGithub"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/content_description_github_contact"
                android:src="@drawable/icons_github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="60dp"
                android:text="@string/text_github_contact" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="134dp"
            android:background="@drawable/white_box"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp">

            <ImageView
                android:id="@+id/iconoCorreo"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:contentDescription="@string/content_description_email_contact"
                android:src="@drawable/icons_mail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="60dp"
                android:text="@string/text_email_contact" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="204dp"
            android:background="@drawable/white_box"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp">

            <ImageView
                android:id="@+id/iconoLinkedIn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/content_description_linkedin_contact"
                android:src="@drawable/icons_linkedin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="60dp"
                android:text="@string/text_linkedin_contact" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="274dp"
            android:background="@drawable/alert_box"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/title_alert_contact"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#454500"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/text_alert_contact"
                android:textAllCaps="false"
                android:textColor="#454500" />
        </RelativeLayout>

    </RelativeLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/default_box"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="TURNOW"
        app:titleTextColor="#FFFFFF"
        app:titleTextAppearance="@style/ToolbarTitleText"
        app:titleMarginStart="130dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>